Scala client compilation. Log option. Flushing of output. Redirected external processes to output on log. Exteral libraries on path with spaces.